# coffee-roaster-market

./: .coveragerc  .env.example  .flake8  .gitignore  .mypy.ini  Dockerfile  README.md  docker-compose.yml  manage.py  noxfile.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.circleci/: config.yml
coffee_roaster_market/: asgi.py  settings.py  urls.py  wsgi.py
coffee_roaster_market/apps/: conftest.py
coffee_roaster_market/apps/account/: apps.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
coffee_roaster_market/apps/account/migrations/: 0001_initial.py  0002_alter_user_is_active.py
coffee_roaster_market/apps/account/templates/email/: activation.html
coffee_roaster_market/apps/account/tests/: conftest.py  test_serializers.py  test_views.py
coffee_roaster_market/apps/coffee/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
coffee_roaster_market/apps/coffee/migrations/: 0001_initial.py  0002_rename_descrption_coffeemodel_description.py
coffee_roaster_market/apps/coffee/tests/: assets.py  factories.py  test_models.py  test_serializers.py  test_views.py
coffee_roaster_market/apps/item/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
coffee_roaster_market/apps/item/migrations/: 0001_initial.py  0002_alter_itemmodel_coffee.py
coffee_roaster_market/apps/item/tests/: factories.py  test_serializers.py  test_views.py
