[tool.poetry]
name = "coffee-roaster-market"
version = "0.1.0"
description = "Django based - coffee roaster we market"
authors = ["Aleksander Pawlak <qaleksander.pawlak1996@gmail.com>", "Paweł Kucharski <pawel.kucharski@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"Django-2.2.19" = "^2.2.19-alpha.20210217101109"
django-rest-framework = "^0.1.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
